--- a/app/src/main/res/layout-port/main_layout.xml
+++ b/app/src/main/res/layout-port/main_layout.xml
@@ -15,11 +15,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/camera_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:srcCompat="@android:drawable/ic_menu_camera" />
         </LinearLayout>
     </ScrollView>
 
@@ -29,7 +24,9 @@
         android:layout_height="wrap_content"
         android:gravity="bottom"
         android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp">
 
         <Space
             android:layout_width="wrap_content"
@@ -41,7 +38,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            app:srcCompat="@drawable/graph_icon" />
+            app:srcCompat="@drawable/graph_icon"
+            />
 
         <Space
             android:layout_width="wrap_content"
@@ -49,11 +47,12 @@
             android:layout_weight="0.5" />
 
         <ImageButton
-            android:id="@+id/direct_img_btn"
+            android:id="@+id/camera_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            app:srcCompat="@drawable/folder_icon" />
+            app:srcCompat="@android:drawable/ic_menu_camera"
+            />
 
         <Space
             android:layout_width="wrap_content"
@@ -65,11 +64,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            app:srcCompat="@drawable/user_icon" />
+            app:srcCompat="@drawable/user_icon"
+            />
 
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5" />
+            android:layout_weight="0.5"
+            />
     </LinearLayout>
 </RelativeLayout>
